<resources>
    <string name="app_name">Tarefas</string>
    <string name="minhas_tarefas">Minhas Tarefas</string>
    <string name="adicionar_tarefa">Adicionar Tarefa</string>
    <string name="nome_da_tarefa">Nome da Tarefa</string>
    <string name="tarefa_selecionada">Tarefa Selecionada</string>
    <string name="alterar_tarefa">Alterar Tarefa</string>
    <string name="cadastro_de_tarefas">Cadastro de Tarefas</string>
    <string name="descricao">Descrição</string>
    <string name="feito">Feito</string>

</resources>