<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A1CAF1"
    tools:context=".view.CadastroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/detalhe1"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_de_tarefas"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_marginBottom="50dp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/nome_da_tarefa"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/et_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/nome_da_tarefa"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/descricao"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/descricao"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_adicionar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/adicionar_tarefa"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:background="#87A96B"
        />

</LinearLayout>