<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.TarefaActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#A1CAF1"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/detalhe1"
                android:scaleType="fitXY"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tarefa_selecionada"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@android:color/black"
                android:padding="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_da_tarefa"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tv_nome_tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_da_tarefa"
                android:textSize="22sp"
                android:textStyle="italic"
                android:textColor="@android:color/black"
                android:layout_margin="16dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_nome_tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tv_descricao_tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="descricao"
                android:textSize="22sp"
                android:textStyle="italic"
                android:textColor="@android:color/black"
                android:layout_margin="16dp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/et_descricao_tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:visibility="gone"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_alterar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/alterar_tarefa"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:background="#87A96B"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>